update job and remove blurry Raven photo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="jumbotron">
       <div class="row">
         <div class="col-md-3 text-center">
-          <img src="img/raven-large.jpg" class="img-circle"></img>
+          <img src="img/jaxface-square.jpg" class="img-circle" width="200px" height="200px"></img>
           <br class="visible-sm">
         </div>
         <div class="col-md-9">
@@ -55,9 +55,10 @@
       <div class="col-md-8">
         <h2>Professional</h2>
         <p>
-          Currently I am employed as a Software Engineer at
-          <a href="https://tasktop.com">Tasktop Technologies</a>. At Tasktop I work with some very clever people creating innovative tools to improve the
-          world of software delivery for individual developers, as well as huge organizations at scale.
+          Currently I am employed as a Software Engineer at <a href="https://asana.com">Asana</a>. At Asana I work with some very clever people creating software which enables people to manage their work effectively so they can accomplish their missions faster than ever.
+        </p>
+        <p>
+          Previously I spent a number of years at <a href="https://tasktop.com">Tasktop Technologies</a> where I worked on many different tools that helped connect people to their work effortlessly.
         </p>
       </div>
       <div class="col-md-2"></div>
@@ -66,10 +67,7 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <p>
-          As a part of my work at Tasktop I am a committer for the
-          <a href="https://eclipse.org/mylyn">Mylyn</a> open source project, a part of the greater
-          <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem. There I work to bring the software development lifecycle into the Eclipse workbench
-          to help make developing software in Eclipse that much more enjoyable.
+          As a part of my work at Tasktop I was a committer for the <a href="https://eclipse.org/mylyn">Mylyn</a> open source project, a part of the greater <a href="https://www.eclipse.org">Eclipse</a> open source ecosystem. There I worked to bring the software development lifecycle into the Eclipse workbench to help make developing software in Eclipse that much more enjoyable.
         </p>
       </div>
       <div class="col-md-2"></div>
@@ -78,11 +76,9 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <h2>Academic</h2>
-        <p>I studied Computer Science and Physics (with a sprinkling of Linguistics) at the
-          <a href="https://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great
-          companies like the aforementioned
-          <a href="https://tasktop.com">Tasktop Technologies</a> and
-          <a href="https://safe.com">Safe Software</a>.</p>
+        <p>
+          I studied Computer Science and Physics (with a sprinkling of Linguistics) at the<a href="https://ubc.ca">University of British Columbia</a> from 2009 to 2015. During this time I spent two years on co-op working for great companies like the aforementioned <a href="https://tasktop.com">Tasktop Technologies</a> and <a href="https://safe.com">Safe Software</a>.
+        </p>
       </div>
       <div class="col-md-2"></div>
     </div>
